--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "devDependencies": {
     "browser-sync": "^2.7.12",
     "del": "^1.2.0",
+    "globule": "^0.2.0",
     "gulp": "^3.9.0",
+    "gulp-angular-embed-templates": "^0.1.5",
     "gulp-concat": "^2.5.2",
     "gulp-html-replace": "^1.5.1",
     "gulp-jshint": "^1.11.0",
