--- a/config.json
+++ b/config.json
@@ -1,8 +1,13 @@
 {
   "build_dir": "dist",
-  "dependencies": [
-    "bower_components/angular/angular.min.js",
-    "bower_components/angular-ui-router/release/angular-ui-router.min.js",
-    "bower_components/underscore/underscore-min.js"
-  ]
+  "dependencies": {
+    "vendor":[
+      "bower_components/angular/angular.min.js",
+      "bower_components/angular-ui-router/release/angular-ui-router.min.js",
+      "bower_components/underscore/underscore-min.js"
+    ],
+    "css":[
+
+    ]
+  }
 }
